@@ -2,7 +2,7 @@ dnl This file is part of the eix project and distributed under the
 dnl terms of the GNU General Public License v2.
 dnl
 dnl Copyright (c)
-dnl  Martin Väth <vaeth@mathematik.uni-wuerzburg.de>
+dnl  Martin V\"ath <vaeth@mathematik.uni-wuerzburg.de>
 dnl
 dnl MV_IF_EMPTY([ARG], [if-true], [if-false])
 dnl Expands to if-true or if-false, depending on whether ARG is empty.
