@@ -4,7 +4,7 @@
 #   Copyright (c)
 #     Wolfgang Frisch <xororand@users.sourceforge.net>
 #     Emil Beinroth <emilbeinroth@gmx.net>
-#     Martin Väth <vaeth@mathematik.uni-wuerzburg.de>
+#     Martin V\"ath <vaeth@mathematik.uni-wuerzburg.de>
 
 AUTOMAKE_OPTIONS = subdir-objects
 
